<resources>
    <string name="app_name">Mymovielist</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="possui_cadastro">Não possui cadastro?</string>
    <string name="tem_conta">Tem uma conta?</string>
    <string name="Ola">Olá! Que bom ver você de novo.</string>
    <string name="BemVindo">Olá! Seja muito bem-vindo!</string>
    <string name="lb_listaFilmes">Lista de Filmes Séries</string>
    <string name="Pesquisar">Pesquisar</string>
</resources>